# dq-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dbt_project.yml  mkdocs.yml  pyproject.toml  run_publish_docs.sh  run_test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/dbt-action/: Dockerfile  (+2 more)
.github/actions/dbt-action-snowflake-1-3/: action.yaml  entrypoint.sh
.github/workflows/: ci-pr-new.yml  ci-pr.yml  ci_integration_tests.yml  publish-docs.yml
docs/: hooks.py
integration_tests/: README.md  dbt_project.yml  package-lock.yml  packages_1.0.yml  packages_1.2.yml  packages_1.4.yml  packages_1_3.yml
integration_tests/ci/: sample.profiles.yml  snowflake.init.sf
integration_tests/models/: source_dq_tools_test.yml  time_spine.yml
macros/: create_table_dq_issue_log.sql
macros/cross_db_utils/: current_timestamp.sql  datatypes.sql  date_trunc.sql  dateadd.sql  except.sql  transaction.sql
macros/generic_tests/: test_accepted_values_where_db.sql  test_equal_rowcount_where_db.sql  test_equality_where_db.sql  test_expression_is_true_db.sql  test_not_null_where_db.sql  test_recency_db.sql  test_relationships_where_db.sql  test_unique_where_db.sql
macros/singular_tests/: dq_exec_custom_test_db.sql
models/01_lake/: dq_issue_log.sql  dq_issue_log.yml  source_dq_tools.yml
models/04_metric/: metric__data_quality_score.yml  metric__test_coverage.yml  metric__test_to_column_ratio.yml  metricflow_time_spine.sql  metricflow_time_spine.yml  sm__data_quality_score.yml  sm__test_coverage.yml  test_coverage.yml
(+87 files in other folders)
